--- a/index.html
+++ b/index.html
@@ -4,9 +4,191 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolia</title>
+    <title>Grid site</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1></h1>
+    <div class="container d-grid gap-3 mt-4">
+      <div class="row bg-success">
+        <div class="col">name</div>
+        <div class="col">menu</div>
+        <div class="col">dropdown</div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-md-inline d-lg-none d-sm-inline">
+          <div class="me-2 text-center bg-primary h-100 d-flex">
+            <img
+              class="rounded-pill mt-4 pe-2 ps-4"
+              src="./pictures/1278511877.jpeg"
+              width="300px"
+              alt="lebron"
+            />
+            <div class="mt-4 p-2">link</div>
+            <div class="mt-4 p-2">links</div>
+            <div class="mt-4 p-2">links</div>
+          </div>
+        </div>
+        <div class="col-sm-3 d-lg-inline d-md-none d-sm-none">
+          <div class="me-2 text-center bg-primary h-100">
+            <img
+              class="rounded-pill mt-4 pe-2 ps-4"
+              src="./pictures/1278511877.jpeg"
+              width="300px"
+              alt="lebron"
+            />
+            <div class="mt-4">link</div>
+            <div class="">links</div>
+            <div class="">links</div>
+          </div>
+        </div>
+        <div class="col-sm-9 bg-info">
+          <div class="row">
+            <div class="col-sm-2 mt-5">
+              <div class="leftimage text-center border rounded-pill bg-success">
+                title
+              </div>
+              <div
+                class="leftimage text-center border rounded-pill mt-4 bg-success"
+              >
+                title
+              </div>
+              <div
+                class="leftimage text-center border rounded-pill mt-4 bg-success"
+              >
+                title
+              </div>
+              <div
+                class="leftimage text-center border rounded-pill mt-4 bg-success"
+              >
+                title
+              </div>
+            </div>
+            <div class="col mt-4 bg-secondary me-4">
+              <div class="col">
+                <div>
+                  <img
+                    class="float-start rounded me-2 mt-2"
+                    src="./pictures/1278511877.jpeg"
+                    width="200px"
+                    alt="lebron"
+                  />
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Repellat iure quasi nostrum enim corrupti perferendis? Sit
+                  dolor, expedita odit eaque dolorum minima quis quasi,
+                  exercitationem unde soluta omnis qui quo. Lorem, ipsum dolor
+                  sit amet consectetur adipisicing elit. Mollitia, dignissimos
+                  similique numquam officiis ex voluptate nemo, exercitationem
+                  natus culpa consequatur necessitatibus fuga beatae quis
+                  quisquam error tempora iste molestias consectetur.Lorem ipsum
+                  dolor sit amet, consectetur adipisicing elit. Repellat iure
+                  quasi nostrum enim corrupti perferendis? Sit dolor, expedita
+                  odit eaque dolorum minima quis quasi, exercitationem unde
+                  soluta omnis qui quo. Lorem, ipsum dolor sit amet consectetur
+                  adipisicing elit. Mollitia, dignissimos similique numquam
+                  officiis ex voluptate nemo, exercitationem natus culpa
+                  consequatur necessitatibus fuga beatae quis quisquam error
+                  tempora iste molestias consectetur.Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repellat iure quasi nostrum enim
+                  corrupti perferendis? Sit dolor, expedita odit eaque dolorum
+                  minima quis quasi, exercitationem unde soluta omnis qui quo.
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Mollitia, dignissimos similique numquam officiis ex voluptate
+                  nemo, exercitationem natus culpa consequatur necessitatibus
+                  fuga beatae quis quisquam error tempora iste molestias
+                  consectetur.
+                </p>
+              </div>
+
+              <div class="col">
+                Description text Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Officiis doloribus harum deserunt sint
+                quibusdam, adipisci
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col d-flex">
+              settings
+              <div class="col d-flex ms-2">
+                <div class="dropdown pe-2">
+                  <button
+                    class="btn btn-primary dropdown-toggle"
+                    type="button"
+                    id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    toggle
+                  </button>
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="dropdownMenuButton1"
+                  >
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </div>
+                <select
+                  class="form-select bg-secondary me-2 form-select-sm w-25"
+                  aria-label="Default select example"
+                >
+                  <option selected>Open this select menu</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+                <input
+                  type="text"
+                  class="btn btn-success col-sm-2"
+                  placeholder="search"
+                />
+              </div>
+            </div>
+            <div class="d-flex flex-row-reverse">
+              <input
+                class="btn btn-primary ms-2 mb-2 mt-2 w-20"
+                type="submit"
+                value="cancel button"
+              />
+              <input
+                class="btn btn-primary mt-2 mb-2 w-20"
+                type="reset"
+                value="Save button"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row bg-secondary">
+        <div class="col d-flex col-sm-2">
+          <div class="col">footer</div>
+          <div class="col">text1</div>
+          <div class="col">footer</div>
+          <div class="col">text2</div>
+        </div>
+        <div class="col"></div>
+        <div class="col d-flex text-end">
+          <div class="col">footer</div>
+          <div class="col">text3</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
