--- a/index.html
+++ b/index.html
@@ -20,171 +20,187 @@
   <body>
     <div class="container d-grid gap-3 mt-4">
       <div class="row bg-success">
-        <div class="col">name</div>
-        <div class="col">menu</div>
-        <div class="col">dropdown</div>
+        <div class="col bg-secondary">name</div>
+        <div class="col-sm-7 bg-danger">menu</div>
+        <div class="col bg-warning">dropdown</div>
       </div>
       <div class="row">
-        <div class="col d-none d-md-inline d-lg-none d-sm-inline">
-          <div class="me-2 text-center bg-primary h-100 d-flex">
-            <img
-              class="rounded-pill mt-4 pe-2 ps-4"
-              src="./pictures/1278511877.jpeg"
-              width="300px"
-              alt="lebron"
-            />
-            <div class="mt-4 p-2">link</div>
-            <div class="mt-4 p-2">links</div>
-            <div class="mt-4 p-2">links</div>
+        <div class="col mt-2 px-0 mx-0">
+          <div class="col d-none d-md-inline d-lg-none d-sm-inline">
+            <div class="me-2 bg-primary h-100 d-flex mx-0 px-0">
+              <img
+                class="rounded-pill mt-4 pe-2 ps-4 mb-4"
+                src="./pictures/1278511877.jpeg"
+                width="200px"
+                alt="lebron"
+              />
+              <div class="mt-4 p-2">links</div>
+              <div class="mt-4 p-2">links</div>
+              <div class="mt-4 p-2">links</div>
+            </div>
+          </div>
+          <div class="col-lg-3 d-lg-inline d-md-none d-sm-none">
+            <div class="me-2 text-center bg-primary h-100">
+              <img
+                class="rounded-pill mt-4 pe-2 ps-4"
+                src="./pictures/1278511877.jpeg"
+                width="200px"
+                alt="lebron"
+              />
+              <div class="mt-4">link</div>
+              <div class="">links</div>
+              <div class="">links</div>
+            </div>
           </div>
         </div>
-        <div class="col-sm-3 d-lg-inline d-md-none d-sm-none">
-          <div class="me-2 text-center bg-primary h-100">
-            <img
-              class="rounded-pill mt-4 pe-2 ps-4"
-              src="./pictures/1278511877.jpeg"
-              width="300px"
-              alt="lebron"
-            />
-            <div class="mt-4">link</div>
-            <div class="">links</div>
-            <div class="">links</div>
-          </div>
-        </div>
-        <div class="col-sm-9 bg-info">
-          <div class="row">
-            <div class="col-sm-2 mt-5">
-              <div class="leftimage text-center border rounded-pill bg-success">
-                title
+        <div class="col-lg-9 mt-2">
+          <div class="col">
+            <div class="row bg-info rounded">
+              <div class="col-sm-2 mt-5">
+                <div
+                  class="leftimage text-center border rounded-pill bg-success"
+                >
+                  title
+                </div>
+                <div
+                  class="leftimage text-center border rounded-pill mt-4 bg-success"
+                >
+                  title
+                </div>
+                <div
+                  class="leftimage text-center border rounded-pill mt-4 bg-success"
+                >
+                  title
+                </div>
+                <div
+                  class="leftimage text-center border rounded-pill mt-4 bg-success"
+                >
+                  title
+                </div>
               </div>
-              <div
-                class="leftimage text-center border rounded-pill mt-4 bg-success"
-              >
-                title
-              </div>
-              <div
-                class="leftimage text-center border rounded-pill mt-4 bg-success"
-              >
-                title
-              </div>
-              <div
-                class="leftimage text-center border rounded-pill mt-4 bg-success"
-              >
-                title
+              <div class="col mt-4 me-4">
+                <div class="col">
+                  <div class="d-none d-lg-inline">
+                    <img
+                      class="float-start rounded me-2 mt-2"
+                      src="./pictures/1278511877.jpeg"
+                      width="200px"
+                      alt="lebron"
+                    />
+                  </div>
+                  <div class="d-lg-none d-sm-inline">
+                    <img
+                      class="rounded mx-auto d-block mt-4"
+                      src="./pictures/1278511877.jpeg"
+                      width="300px"
+                      alt="lebron"
+                    />
+                  </div>
+                  <p class="mt-4">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Repellat iure quasi nostrum enim corrupti perferendis? Sit
+                    dolor, expedita odit eaque dolorum minima quis quasi,
+                    exercitationem unde soluta omnis qui quo. Lorem, ipsum dolor
+                    sit amet consectetur adipisicing elit. Mollitia, dignissimos
+                    similique numquam officiis ex voluptate nemo, exercitationem
+                    natus culpa consequatur necessitatibus fuga beatae quis
+                    quisquam error tempora iste molestias consectetur.Lorem
+                    ipsum dolor sit amet, consectetur adipisicing elit. Repellat
+                    iure quasi nostrum enim corrupti perferendis? Sit dolor,
+                    expedita odit eaque dolorum minima quis quasi,
+                    exercitationem unde soluta omnis qui quo. Lorem, ipsum dolor
+                    sit amet consectetur adipisicing elit. Mollitia, dignissimos
+                    similique numquam officiis ex voluptate nemo, exercitationem
+                    natus culpa consequatur necessitatibus fuga beatae quis
+                    quisquam error tempora iste molestias consectetur.Lorem
+                    ipsum dolor sit amet, consectetur adipisicing elit. Repellat
+                    iure quasi nostrum enim corrupti perferendis? Sit dolor,
+                    expedita odit eaque dolorum minima quis quasi,
+                    exercitationem unde soluta omnis qui quo. Lorem, ipsum dolor
+                    sit amet consectetur adipisicing elit. Mollitia, dignissimos
+                    similique numquam officiis ex voluptate nemo, exercitationem
+                    natus culpa consequatur necessitatibus fuga beatae quis
+                    quisquam error tempora iste molestias consectetur.
+                  </p>
+                </div>
+
+                <div class="col pb-4">
+                  Description text Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Officiis doloribus harum deserunt sint
+                  quibusdam, adipisci
+                </div>
               </div>
             </div>
-            <div class="col mt-4 bg-secondary me-4">
-              <div class="col">
-                <div>
-                  <img
-                    class="float-start rounded me-2 mt-2"
-                    src="./pictures/1278511877.jpeg"
-                    width="200px"
-                    alt="lebron"
+            <div class="row mt-4 bg-warning rounded">
+              <div class="col d-lg-flex d-md-flex">
+                <div class="text-center">settings</div>
+                <div class="col d-lg-flex d-md-flex ms-2">
+                  <div class="dropdown pe-2">
+                    <button
+                      class="btn btn-primary dropdown-toggle mt-2"
+                      type="button"
+                      id="dropdownMenuButton1"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      toggle
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuButton1"
+                    >
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li>
+                        <a class="dropdown-item" href="#">Another action</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Something else here</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <select
+                    class="form-select bg-secondary me-2 form-select-sm w-25 mt-2"
+                    aria-label="Default select example"
+                  >
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                  <input
+                    type="text"
+                    class="btn btn-success col-sm-2 mt-2"
+                    placeholder="search"
                   />
                 </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Repellat iure quasi nostrum enim corrupti perferendis? Sit
-                  dolor, expedita odit eaque dolorum minima quis quasi,
-                  exercitationem unde soluta omnis qui quo. Lorem, ipsum dolor
-                  sit amet consectetur adipisicing elit. Mollitia, dignissimos
-                  similique numquam officiis ex voluptate nemo, exercitationem
-                  natus culpa consequatur necessitatibus fuga beatae quis
-                  quisquam error tempora iste molestias consectetur.Lorem ipsum
-                  dolor sit amet, consectetur adipisicing elit. Repellat iure
-                  quasi nostrum enim corrupti perferendis? Sit dolor, expedita
-                  odit eaque dolorum minima quis quasi, exercitationem unde
-                  soluta omnis qui quo. Lorem, ipsum dolor sit amet consectetur
-                  adipisicing elit. Mollitia, dignissimos similique numquam
-                  officiis ex voluptate nemo, exercitationem natus culpa
-                  consequatur necessitatibus fuga beatae quis quisquam error
-                  tempora iste molestias consectetur.Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repellat iure quasi nostrum enim
-                  corrupti perferendis? Sit dolor, expedita odit eaque dolorum
-                  minima quis quasi, exercitationem unde soluta omnis qui quo.
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia, dignissimos similique numquam officiis ex voluptate
-                  nemo, exercitationem natus culpa consequatur necessitatibus
-                  fuga beatae quis quisquam error tempora iste molestias
-                  consectetur.
-                </p>
               </div>
-
-              <div class="col">
-                Description text Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Officiis doloribus harum deserunt sint
-                quibusdam, adipisci
-              </div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col d-flex">
-              settings
-              <div class="col d-flex ms-2">
-                <div class="dropdown pe-2">
-                  <button
-                    class="btn btn-primary dropdown-toggle"
-                    type="button"
-                    id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    toggle
-                  </button>
-                  <ul
-                    class="dropdown-menu"
-                    aria-labelledby="dropdownMenuButton1"
-                  >
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
-                </div>
-                <select
-                  class="form-select bg-secondary me-2 form-select-sm w-25"
-                  aria-label="Default select example"
-                >
-                  <option selected>Open this select menu</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
+              <div class="d-lg-flex d-md-flex flex-row-reverse">
                 <input
-                  type="text"
-                  class="btn btn-success col-sm-2"
-                  placeholder="search"
+                  class="btn btn-primary ms-2 mb-2 mt-2 w-20"
+                  type="submit"
+                  value="cancel button"
+                />
+                <input
+                  class="btn btn-primary mt-2 mb-2 w-20"
+                  type="reset"
+                  value="Save button"
                 />
               </div>
             </div>
-            <div class="d-flex flex-row-reverse">
-              <input
-                class="btn btn-primary ms-2 mb-2 mt-2 w-20"
-                type="submit"
-                value="cancel button"
-              />
-              <input
-                class="btn btn-primary mt-2 mb-2 w-20"
-                type="reset"
-                value="Save button"
-              />
-            </div>
           </div>
         </div>
       </div>
-      <div class="row bg-secondary">
-        <div class="col d-flex col-sm-2">
+      <div class="row bg-secondary flex-sm-column">
+        <div class="col d-lg-flex d-md-flex col-lg-2 text-center">
           <div class="col">footer</div>
           <div class="col">text1</div>
           <div class="col">footer</div>
           <div class="col">text2</div>
         </div>
         <div class="col"></div>
-        <div class="col d-flex text-end">
+        <div class="col d-lg-flex d-md-flex text-end">
           <div class="col">footer</div>
           <div class="col">text3</div>
         </div>
