--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
           menu
         </div>
         <div class="col bg-warning">dropdown</div>
-        <div class="text-center d-none d-sm-inline d-md-none">menu</div>
+        <div class="text-center d-inline d-sm-none d-md-none d-lg-none">
+          menu
+        </div>
       </div>
       <div class="row">
         <div class="col mt-2 px-0 mx-0">
           <div class="col d-none d-md-inline d-lg-none d-sm-inline">
-            <div class="me-2 bg-primary h-100 d-flex mx-0 px-0">
+            <div class="me-lg-2 bg-primary h-100 d-flex mx-0 px-0">
               <img
                 class="rounded-pill mt-4 pe-2 ps-4 mb-4"
                 src="./pictures/1278511877.jpeg"
@@ -43,7 +45,7 @@
             </div>
           </div>
           <div class="col-lg-3 d-lg-inline d-md-none d-sm-none">
-            <div class="me-lg-2 me-md-0 text-center bg-primary h-100">
+            <div class="me-lg-2 me-0 text-center bg-primary h-100">
               <img
                 class="rounded-pill mt-4 pe-2 ps-4"
                 src="./pictures/1278511877.jpeg"
@@ -195,7 +197,7 @@
           </div>
         </div>
       </div>
-      <div class="row bg-secondary flex-sm-column flex-md-row flex-lg-row">
+      <div class="row bg-secondary flex-column flex-md-row flex-lg-row">
         <div class="col d-lg-flex d-md-flex col-lg-2 text-center">
           <div class="col">footer</div>
           <div class="col">text1</div>
